# music_separation

./: .gitignore  alembic.ini  main.py  pyproject.toml
fourier/: config.py  exceptions.py  main.py
fourier/auth/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
fourier/dao/: base.py  database.py  session_maker.py
fourier/logic/: logic.py
fourier/migrations/: env.py
